--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="font" href="assets/font/NEON____.TTF">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="font" href="/assets/font/NEON____.TTF">
 </head>
 <body>
     <main>
@@ -24,6 +24,6 @@
     </main>
     
 
-    <script src="js/counter.js"></script>
+    <script src="/js/counter.js"></script>
 </body>
 </html>
